--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div class="qr-code-card">
+  <main class="qr-code-card">
     <img class ="qr-code-card__img" src="./images/image-qr-code-288x288.png" srcset="./images/image-qr-code-288x288.png 1x, ./images/image-qr-code-576x576.png 2x" alt="QR code to visit Frontend Mentor">
     <div class="qr-code-card__text-wrapper">
       <h1 class="text-preset-1">Improve your front-end skills by building projects</h1>
       <p class="text-preset-2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
     </div>
-  </div>
+  </main>
 </body>
 </html>
